# open-xiaoai-bridge

./: .dockerignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  start.bat  start.sh
.github/workflows/: release.yml
core/: app.py  event.py  openclaw.py  openclaw_conversation.py  wakeup_session.py  xiaoai.py  xiaozhi.py
core/services/: api_server.py  speaker.py
core/services/audio/asr/: __init__.py  doubao.py  service.py
core/services/audio/kws/: __init__.py  keywords.py
core/services/audio/vad/: __init__.py
core/services/protocols/: websocket_protocol.py
core/services/tts/: doubao.py
core/utils/: config.py
native/: Cargo.toml
native/src/: lib.rs  server.rs
native/src/tts/: mod.rs
skills/xiaoai-tts/: SKILL.md
skills/xiaoai-tts/scripts/: api_client.py  control.py  list_doubao_voices.py  play_file.py  play_url.py  tts_doubao.py
tests/: test_doubao_asr.py  test_openclaw_live_connectivity.py  test_tts.py
