[package]
name = "open_xiaoai_server"
version = "1.0.0"
edition = "2021"

[workspace]

[lib]
name = "open_xiaoai_server"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.24", features = [
    "attributes",
    "tokio-runtime",
] }
open-xiaoai = { git = "https://github.com/coderzc/open-xiaoai.git", branch = "main" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"